# ProjectTox-Qt-GUI

./: CMakeLists.txt  QTox.cpp  QTox.h  QTox.kdev4  copyright.txt  main.cpp
.kdev4/: QTox.kdev4
projectfiles/QtCreator/: QTox.pro
resources/: CMakeLists.txt
src/: CMakeLists.txt  account.cpp  account.h  chatpagewidget.cpp  chatpagewidget.hpp  chatpagewidgetfactory.cpp  chatpagewidgetfactory.h  copyableelidelabel.hpp  core.cpp  core.hpp  createnewaccountwizardpage.cpp  createnewaccountwizardpage.hpp  ichatpagewidget.hpp  loginwindow.cpp  loginwindow.hpp  mainwindow.cpp  mainwindow.hpp  pageswidget.cpp  pageswidget.hpp  starter.cpp  starter.hpp
src/KDE/: CMakeLists.txt
src/Qt/: main.cpp
src/Settings/: settingsdialog.hpp
translations/: CMakeLists.txt  i18n_cz.ts  i18n_de.ts  i18n_en.ts  i18n_fr.ts  i18n_pl.ts  i18n_ru.ts  i18n_uk.ts
